--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "framer-motion": "^12.6.3",
     "lottie-react": "^2.4.1",
     "react": "^19.0.0",
